--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,13 @@
 .page {
+    padding: 10px;
     height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width: 648px) {
+    .page {
+        height: fit-content;
+    }  
 }
